[package]
name = "ztproxy"
version = "0.1.0"
authors = ["Jan De Landtsheer <jan@delandtsheer.eu>"]
edition = "2018"

[dependencies]
serde ="1.0"
serde_derive ="1.0"
serde_json = "1.0"

failure ="0.1"
failure_derive = "0.1"

ipnet = { version = "2", features = ["serde"] }

clap = {version = "2.32.0", features = ["yaml"]} 

reqwest = "0.9.5"

jsonwebtoken = "5.0.1"

url = "1.7.2"